--- a/days_21/pubspec.yaml
+++ b/days_21/pubspec.yaml
@@ -32,8 +32,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  getX:
-    
+  # getX
+  get: 4.6.5
+
+  # 本地数据存储
+  shared_preferences: ^2.0.15
+
 
 
   # The following adds the Cupertino Icons font to your application.
