使用sql数据库

--- a/days_21/pubspec.yaml
+++ b/days_21/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   # 本地数据存储
   shared_preferences: ^2.0.15
 
+  # 数据库
+  sqflite: ^2.2.0+2
+
 
 
   # The following adds the Cupertino Icons font to your application.
