--- a/days_21/pubspec.yaml
+++ b/days_21/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   # 横滑删除
   flutter_slidable: ^2.0.0
 
+  # 通知
+  flutter_local_notifications: ^12.0.3
+  flutter_native_timezone: ^2.0.0
+
 
 
   # The following adds the Cupertino Icons font to your application.
